GTK and EFL on Mac fail to compile WebTextChecker due to missing definition of WKTextCheckerClientBase https://bugs.webkit.org/show_bug.cgi?id=163346

Reviewed by Daniel Bates.

* UIProcess/API/C/WKTextChecker.cpp: Fixed #ifdefs for GTK and EFL builds on Darwin machines.
* UIProcess/API/C/WKTextChecker.h: Ditto.


Canonical link: https://commits.webkit.org/181221@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207296 268f45cc-cd09-0410-ab3c-d52691b4dbfc